--- a/index.html
+++ b/index.html
@@ -2,82 +2,43 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>IT Outsourcing | System Administrator</title>
+<title>Аквариумные рыбки</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 * {
-    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "Segoe UI", Arial, sans-serif;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    background: #0b1220;
-    color: #e5e7eb;
+    background: #e0f2fe;
+    color: #083344;
     line-height: 1.6;
 }
 
 header {
-    background: linear-gradient(135deg, #020617, #0b1220);
+    background: linear-gradient(to bottom, #0284c7, #0ea5e9);
+    color: white;
     padding: 80px 20px;
-}
-
-.header-box {
-    max-width: 1100px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    align-items: center;
-}
-
-.lang {
-    position: absolute;
-    top: 20px;
-    right: 20px;
-}
-
-.lang button {
-    background: #020617;
-    border: 1px solid #1e293b;
-    color: #e5e7eb;
-    padding: 6px 10px;
-    margin-left: 5px;
-    border-radius: 6px;
-    cursor: pointer;
+    text-align: center;
 }
 
 header h1 {
-    font-size: 2.5rem;
-    margin-bottom: 15px;
+    font-size: 2.8rem;
+    margin-bottom: 10px;
 }
 
 header p {
-    color: #94a3b8;
-    margin-bottom: 25px;
-}
-
-.btn {
-    display: inline-block;
-    padding: 14px 28px;
-    background: #2563eb;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: 600;
-}
-
-header img {
-    width: 100%;
-    border-radius: 14px;
+    font-size: 1.2rem;
 }
 
 section {
     max-width: 1100px;
     margin: auto;
-    padding: 70px 20px;
+    padding: 60px 20px;
 }
 
 h2 {
@@ -86,171 +47,132 @@ h2 {
     font-size: 2rem;
 }
 
-.services, .benefits {
+.fish-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 25px;
 }
 
 .card {
-    background: #020617;
-    padding: 28px;
+    background: white;
     border-radius: 14px;
-    border: 1px solid #1e293b;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
 }
 
-.about {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 40px;
-    align-items: center;
-}
-
-.about img {
+.card img {
     width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card div {
+    padding: 20px;
+}
+
+.tips {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: 20px;
+}
+
+.tip {
+    background: #bae6fd;
+    padding: 25px;
     border-radius: 14px;
 }
 
-.contact {
-    text-align: center;
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 15px;
+}
+
+.gallery img {
+    width: 100%;
+    border-radius: 12px;
 }
 
 footer {
-    background: #020617;
+    background: #0284c7;
+    color: white;
     text-align: center;
     padding: 20px;
-    color: #64748b;
-}
-
-@media (max-width: 800px) {
-    .header-box, .about {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
 }
 </style>
 </head>
 
 <body>
 
-<div class="lang">
-    <button onclick="setLang('ru')">RU</button>
-    <button onclick="setLang('ua')">UA</button>
-    <button onclick="setLang('en')">EN</button>
-</div>
-
 <header>
-    <div class="header-box">
-        <div>
-            <h1 data-i18n="title"></h1>
-            <p data-i18n="subtitle"></p>
-            <a href="#contact" class="btn" data-i18n="button"></a>
-        </div>
-        <img src="https://images.unsplash.com/photo-1537432376769-00a0c1b6d5a1" alt="IT Support">
-    </div>
+    <h1>Мир аквариумных рыбок</h1>
+    <p>Красота, спокойствие и жизнь под водой</p>
 </header>
 
 <section>
-    <h2 data-i18n="services_title"></h2>
-    <div class="services">
-        <div class="card" data-i18n="s1"></div>
-        <div class="card" data-i18n="s2"></div>
-        <div class="card" data-i18n="s3"></div>
-        <div class="card" data-i18n="s4"></div>
+    <h2>Популярные аквариумные рыбки</h2>
+    <div class="fish-list">
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1516683037151-9a17603a8dc7" alt="Гуппи">
+            <div>
+                <h3>Гуппи</h3>
+                <p>Неприхотливые и яркие рыбки, идеально подходят для начинающих.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1544551763-ced87a2f79c2" alt="Скалярия">
+            <div>
+                <h3>Скалярия</h3>
+                <p>Элегантные рыбки с треугольной формой тела.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="https://images.unsplash.com/photo-1518837695005-2083093ee35b" alt="Золотая рыбка">
+            <div>
+                <h3>Золотая рыбка</h3>
+                <p>Классика аквариумистики, известная во всём мире.</p>
+            </div>
+        </div>
     </div>
 </section>
 
 <section>
-    <h2 data-i18n="about_title"></h2>
-    <div class="about">
-        <div data-i18n="about_text"></div>
-        <img src="https://images.unsplash.com/photo-1581091012184-5c8d8f64c1c1" alt="Sysadmin">
+    <h2>Советы по уходу</h2>
+    <div class="tips">
+        <div class="tip">
+            <h3>💧 Чистая вода</h3>
+            <p>Регулярно меняйте 20–30% воды каждую неделю.</p>
+        </div>
+        <div class="tip">
+            <h3>🌡 Температура</h3>
+            <p>Поддерживайте температуру, подходящую для выбранных рыб.</p>
+        </div>
+        <div class="tip">
+            <h3>🍽 Кормление</h3>
+            <p>Не перекармливайте — лучше меньше, но регулярно.</p>
+        </div>
+        <div class="tip">
+            <h3>🌿 Растения</h3>
+            <p>Живые растения улучшают экосистему аквариума.</p>
+        </div>
     </div>
 </section>
 
 <section>
-    <h2 data-i18n="why_title"></h2>
-    <div class="benefits">
-        <div class="card" data-i18n="b1"></div>
-        <div class="card" data-i18n="b2"></div>
-        <div class="card" data-i18n="b3"></div>
+    <h2>Галерея</h2>
+    <div class="gallery">
+        <img src="https://images.unsplash.com/photo-1522069169874-c58ec4b76be5" alt="">
+        <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a" alt="">
+        <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438" alt="">
+        <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee" alt="">
     </div>
-</section>
-
-<section id="contact" class="contact">
-    <h2 data-i18n="contact_title"></h2>
-    <p>Email: it.support@example.com</p>
-    <p>Telegram: @it_support</p>
 </section>
 
 <footer>
-    © 2026 IT Outsourcing
+    © 2026 Мир аквариумных рыбок
 </footer>
-
-<script>
-const texts = {
-    ru: {
-        title: "IT-аутсорсинг и системный администратор",
-        subtitle: "Поддержка компьютеров, серверов и сетей для бизнеса и частных клиентов",
-        button: "Связаться",
-        services_title: "Услуги",
-        s1: "🖥 IT-поддержка и настройка ПК",
-        s2: "🌐 Сети, Wi-Fi, VPN, Mikrotik",
-        s3: "🗄 Серверы и резервное копирование",
-        s4: "🔐 Информационная безопасность",
-        about_title: "Обо мне",
-        about_text: "Частный системный администратор. Удобная альтернатива штатному IT-специалисту.",
-        why_title: "Почему я",
-        b1: "⚡ Быстро реагирую",
-        b2: "💼 Опыт работы с бизнесом",
-        b3: "🔧 Практичные решения",
-        contact_title: "Контакты"
-    },
-    ua: {
-        title: "IT-аутсорсинг та системний адміністратор",
-        subtitle: "Підтримка комп'ютерів, серверів і мереж",
-        button: "Звʼязатися",
-        services_title: "Послуги",
-        s1: "🖥 IT-підтримка та налаштування ПК",
-        s2: "🌐 Мережі, Wi-Fi, VPN, Mikrotik",
-        s3: "🗄 Сервери та резервне копіювання",
-        s4: "🔐 Інформаційна безпека",
-        about_title: "Про мене",
-        about_text: "Приватний системний адміністратор для бізнесу та дому.",
-        why_title: "Чому я",
-        b1: "⚡ Швидка реакція",
-        b2: "💼 Досвід для бізнесу",
-        b3: "🔧 Практичні рішення",
-        contact_title: "Контакти"
-    },
-    en: {
-        title: "IT Outsourcing & System Administrator",
-        subtitle: "IT support for business and private clients",
-        button: "Contact me",
-        services_title: "Services",
-        s1: "🖥 IT support & PC setup",
-        s2: "🌐 Networks, Wi-Fi, VPN, Mikrotik",
-        s3: "🗄 Servers & backups",
-        s4: "🔐 IT security",
-        about_title: "About me",
-        about_text: "Freelance system administrator. Reliable IT outsourcing.",
-        why_title: "Why choose me",
-        b1: "⚡ Fast response",
-        b2: "💼 Business-oriented",
-        b3: "🔧 Practical solutions",
-        contact_title: "Contacts"
-    }
-};
-
-function setLang(lang) {
-    document.documentElement.lang = lang;
-    document.querySelectorAll("[data-i18n]").forEach(el => {
-        el.innerText = texts[lang][el.dataset.i18n];
-    });
-}
-
-setLang("ru");
-</script>
 
 </body>
 </html>
