--- a/index.html
+++ b/index.html
@@ -2,94 +2,76 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Аквариумные рыбки</title>
+<title>IT Outsourcing | System Administrator</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-/* ===== БАЗА ===== */
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: "Segoe UI", Arial, sans-serif;
 }
 
 body {
-    color: #083344;
+    background: #0b1220;
+    color: #e5e7eb;
     line-height: 1.6;
-    background: linear-gradient(
-        180deg,
-        #7dd3fc,
-        #38bdf8,
-        #0ea5e9,
-        #0284c7
-    );
-    background-size: 100% 400%;
-    animation: waterMove 20s ease-in-out infinite;
-}
-
-/* АНИМАЦИЯ ВОДЫ */
-@keyframes waterMove {
-    0% { background-position: 0% 0%; }
-    50% { background-position: 0% 100%; }
-    100% { background-position: 0% 0%; }
-}
-
-/* ===== ПУЗЫРЬКИ ===== */
-.bubbles {
-    position: fixed;
-    inset: 0;
-    pointer-events: none;
-    overflow: hidden;
-    z-index: 0;
-}
-
-.bubbles span {
-    position: absolute;
-    bottom: -120px;
-    background: rgba(255,255,255,0.45);
-    border-radius: 50%;
-    animation: bubbleUp linear infinite;
-}
-
-@keyframes bubbleUp {
-    0%   { transform: translateY(0) translateX(0); opacity: 0; }
-    10%  { opacity: 1; }
-    100% { transform: translateY(-120vh) translateX(40px); opacity: 0; }
-}
-
-/* РАЗНЫЕ ПУЗЫРЬКИ */
-.bubbles span:nth-child(1) { left: 5%;  width: 10px; height: 10px; animation-duration: 6s; }
-.bubbles span:nth-child(2) { left: 15%; width: 18px; height: 18px; animation-duration: 9s; }
-.bubbles span:nth-child(3) { left: 25%; width: 8px;  height: 8px;  animation-duration: 5s; }
-.bubbles span:nth-child(4) { left: 35%; width: 14px; height: 14px; animation-duration: 7s; }
-.bubbles span:nth-child(5) { left: 45%; width: 22px; height: 22px; animation-duration: 11s; }
-.bubbles span:nth-child(6) { left: 55%; width: 12px; height: 12px; animation-duration: 6s; }
-.bubbles span:nth-child(7) { left: 65%; width: 16px; height: 16px; animation-duration: 8s; }
-.bubbles span:nth-child(8) { left: 75%; width: 9px;  height: 9px;  animation-duration: 5s; }
-.bubbles span:nth-child(9) { left: 85%; width: 20px; height: 20px; animation-duration: 10s; }
-.bubbles span:nth-child(10){ left: 95%; width: 11px; height: 11px; animation-duration: 6s; }
-
-/* ===== КОНТЕНТ ===== */
-header, section, footer {
-    position: relative;
-    z-index: 1;
 }
 
 header {
-    padding: 90px 20px;
-    text-align: center;
-    color: white;
+    background: linear-gradient(135deg, #020617, #0b1220);
+    padding: 80px 20px;
+}
+
+.header-box {
+    max-width: 1100px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    align-items: center;
+}
+
+.lang {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
+
+.lang button {
+    background: #020617;
+    border: 1px solid #1e293b;
+    color: #e5e7eb;
+    padding: 6px 10px;
+    margin-left: 5px;
+    border-radius: 6px;
+    cursor: pointer;
 }
 
 header h1 {
-    font-size: 3rem;
-    margin-bottom: 10px;
+    font-size: 2.5rem;
+    margin-bottom: 15px;
 }
 
 header p {
-    font-size: 1.2rem;
-    opacity: 0.9;
+    color: #94a3b8;
+    margin-bottom: 25px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 14px 28px;
+    background: #2563eb;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 600;
+}
+
+header img {
+    width: 100%;
+    border-radius: 14px;
 }
 
 section {
@@ -104,147 +86,171 @@ h2 {
     font-size: 2rem;
 }
 
-/* ===== КАРТОЧКИ РЫБОК ===== */
-.fish-list {
+.services, .benefits {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 25px;
 }
 
 .card {
-    background: rgba(255,255,255,0.92);
-    border-radius: 16px;
-    overflow: hidden;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    transition: transform 0.3s;
+    background: #020617;
+    padding: 28px;
+    border-radius: 14px;
+    border: 1px solid #1e293b;
 }
 
-.card:hover {
-    transform: translateY(-8px);
-}
-
-.card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-}
-
-.card div {
-    padding: 20px;
-}
-
-/* ===== СОВЕТЫ ===== */
-.tips {
+.about {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    align-items: center;
 }
 
-.tip {
-    background: rgba(186,230,253,0.9);
-    padding: 25px;
-    border-radius: 16px;
-}
-
-/* ===== ГАЛЕРЕЯ ===== */
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 15px;
-}
-
-.gallery img {
+.about img {
     width: 100%;
     border-radius: 14px;
 }
 
-/* ===== FOOTER ===== */
+.contact {
+    text-align: center;
+}
+
 footer {
-    background: rgba(2,132,199,0.9);
-    color: white;
+    background: #020617;
     text-align: center;
     padding: 20px;
+    color: #64748b;
+}
+
+@media (max-width: 800px) {
+    .header-box, .about {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
 }
 </style>
 </head>
 
 <body>
 
-<!-- ПУЗЫРЬКИ -->
-<div class="bubbles">
-    <span></span><span></span><span></span><span></span><span></span>
-    <span></span><span></span><span></span><span></span><span></span>
+<div class="lang">
+    <button onclick="setLang('ru')">RU</button>
+    <button onclick="setLang('ua')">UA</button>
+    <button onclick="setLang('en')">EN</button>
 </div>
 
 <header>
-    <h1>Мир аквариумных рыбок</h1>
-    <p>Спокойствие, красота и жизнь под водой</p>
+    <div class="header-box">
+        <div>
+            <h1 data-i18n="title"></h1>
+            <p data-i18n="subtitle"></p>
+            <a href="#contact" class="btn" data-i18n="button"></a>
+        </div>
+        <img src="https://images.unsplash.com/photo-1537432376769-00a0c1b6d5a1" alt="IT Support">
+    </div>
 </header>
 
 <section>
-    <h2>Популярные рыбки</h2>
-    <div class="fish-list">
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1516683037151-9a17603a8dc7" alt="Гуппи">
-            <div>
-                <h3>Гуппи</h3>
-                <p>Яркие и неприхотливые рыбки для начинающих.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1544551763-ced87a2f79c2" alt="Скалярия">
-            <div>
-                <h3>Скалярия</h3>
-                <p>Элегантные рыбки с плавными движениями.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <img src="https://images.unsplash.com/photo-1518837695005-2083093ee35b" alt="Золотая рыбка">
-            <div>
-                <h3>Золотая рыбка</h3>
-                <p>Классика аквариумистики.</p>
-            </div>
-        </div>
+    <h2 data-i18n="services_title"></h2>
+    <div class="services">
+        <div class="card" data-i18n="s1"></div>
+        <div class="card" data-i18n="s2"></div>
+        <div class="card" data-i18n="s3"></div>
+        <div class="card" data-i18n="s4"></div>
     </div>
 </section>
 
 <section>
-    <h2>Советы по уходу</h2>
-    <div class="tips">
-        <div class="tip">
-            <h3>💧 Вода</h3>
-            <p>Меняйте 20–30% воды каждую неделю.</p>
-        </div>
-        <div class="tip">
-            <h3>🌡 Температура</h3>
-            <p>Следите за стабильной температурой.</p>
-        </div>
-        <div class="tip">
-            <h3>🍽 Корм</h3>
-            <p>Не перекармливайте рыбок.</p>
-        </div>
-        <div class="tip">
-            <h3>🌿 Растения</h3>
-            <p>Живые растения улучшают экосистему.</p>
-        </div>
+    <h2 data-i18n="about_title"></h2>
+    <div class="about">
+        <div data-i18n="about_text"></div>
+        <img src="https://images.unsplash.com/photo-1581091012184-5c8d8f64c1c1" alt="Sysadmin">
     </div>
 </section>
 
 <section>
-    <h2>Галерея</h2>
-    <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1522069169874-c58ec4b76be5">
-        <img src="https://images.unsplash.com/photo-1517849845537-4d257902454a">
-        <img src="https://images.unsplash.com/photo-1517836357463-d25dfeac3438">
-        <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee">
+    <h2 data-i18n="why_title"></h2>
+    <div class="benefits">
+        <div class="card" data-i18n="b1"></div>
+        <div class="card" data-i18n="b2"></div>
+        <div class="card" data-i18n="b3"></div>
     </div>
+</section>
+
+<section id="contact" class="contact">
+    <h2 data-i18n="contact_title"></h2>
+    <p>Email: it.support@example.com</p>
+    <p>Telegram: @it_support</p>
 </section>
 
 <footer>
-    © 2026 Мир аквариумных рыбок
+    © 2026 IT Outsourcing
 </footer>
+
+<script>
+const texts = {
+    ru: {
+        title: "IT-аутсорсинг и системный администратор",
+        subtitle: "Поддержка компьютеров, серверов и сетей для бизнеса и частных клиентов",
+        button: "Связаться",
+        services_title: "Услуги",
+        s1: "🖥 IT-поддержка и настройка ПК",
+        s2: "🌐 Сети, Wi-Fi, VPN, Mikrotik",
+        s3: "🗄 Серверы и резервное копирование",
+        s4: "🔐 Информационная безопасность",
+        about_title: "Обо мне",
+        about_text: "Частный системный администратор. Удобная альтернатива штатному IT-специалисту.",
+        why_title: "Почему я",
+        b1: "⚡ Быстро реагирую",
+        b2: "💼 Опыт работы с бизнесом",
+        b3: "🔧 Практичные решения",
+        contact_title: "Контакты"
+    },
+    ua: {
+        title: "IT-аутсорсинг та системний адміністратор",
+        subtitle: "Підтримка комп'ютерів, серверів і мереж",
+        button: "Звʼязатися",
+        services_title: "Послуги",
+        s1: "🖥 IT-підтримка та налаштування ПК",
+        s2: "🌐 Мережі, Wi-Fi, VPN, Mikrotik",
+        s3: "🗄 Сервери та резервне копіювання",
+        s4: "🔐 Інформаційна безпека",
+        about_title: "Про мене",
+        about_text: "Приватний системний адміністратор для бізнесу та дому.",
+        why_title: "Чому я",
+        b1: "⚡ Швидка реакція",
+        b2: "💼 Досвід для бізнесу",
+        b3: "🔧 Практичні рішення",
+        contact_title: "Контакти"
+    },
+    en: {
+        title: "IT Outsourcing & System Administrator",
+        subtitle: "IT support for business and private clients",
+        button: "Contact me",
+        services_title: "Services",
+        s1: "🖥 IT support & PC setup",
+        s2: "🌐 Networks, Wi-Fi, VPN, Mikrotik",
+        s3: "🗄 Servers & backups",
+        s4: "🔐 IT security",
+        about_title: "About me",
+        about_text: "Freelance system administrator. Reliable IT outsourcing.",
+        why_title: "Why choose me",
+        b1: "⚡ Fast response",
+        b2: "💼 Business-oriented",
+        b3: "🔧 Practical solutions",
+        contact_title: "Contacts"
+    }
+};
+
+function setLang(lang) {
+    document.documentElement.lang = lang;
+    document.querySelectorAll("[data-i18n]").forEach(el => {
+        el.innerText = texts[lang][el.dataset.i18n];
+    });
+}
+
+setLang("ru");
+</script>
 
 </body>
 </html>
